# To-Do-Or-Not-To-Do

./: README.md
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.js  DialogCreateTodolist.js  DialogEditTodolist.js  Todolist.js  TodolistsContainer.js  index.css
python-script/: infernale_volumen.py
rust-rest-api/: Cargo.toml  Rocket.toml  ]
rust-rest-api/migrations/2023-03-05-075210_priorities/: down.sql  up.sql
rust-rest-api/migrations/2023-03-05-181146_users/: up.sql
rust-rest-api/migrations/2023-03-06-115122_todos/: down.sql  up.sql
rust-rest-api/migrations/2023-03-06-182046_todolists/: down.sql  up.sql
rust-rest-api/migrations/2023-03-13-114829_disable_priorities_table/: up.sql
rust-rest-api/migrations/2023-03-14-044003_TodosTodolists/: down.sql  up.sql
rust-rest-api/migrations/2023-03-20-080516_add_cascades/: up.sql
rust-rest-api/src/: Bookmarks.txt  db.rs  handlers.rs  main.rs  model..dot  model.rs  notes.txt  response.rs  schema.rs
rust-rest-api/src/handlers/: handler_admin.rs  handler_todo.rs  handler_todolist.rs  handler_todotodolist.rs  handler_user.rs
